Actualizo archivos: mejoras visuales y botón editar

--- a/comprar.html
+++ b/comprar.html
@@ -58,6 +58,12 @@
         </select>
 
         <button type="submit">Agregar al carrito</button>
+        <div id="mensajeEdicion" 
+        
+        >
+           Estás editando un reloj. Hacé clic en "Agregar al carrito" para guardar los cambios.
+        </div>
+        
       </form>
     </div>
 
