Subo cambios editados desde VSCode

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Inicio - Relojes</title>
   <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
   <header>
@@ -19,6 +20,8 @@
   </header>
 
   <main>
+    <div class="fondo" id="fondo"></div>
+
     <section class="contenido">
       <h2>Explorá nuestra colección de relojes</h2>
       <p>Bienvenido al sitio oficial donde podés descubrir y comprar los mejores modelos de relojes de marcas como Omega, Rolex, Casio y más.</p>
@@ -26,4 +29,5 @@
     </section>
   </main>
 </body>
+<script src="script.js"></script>
 </html>
