--- a/index.html
+++ b/index.html
@@ -1,100 +1,19 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Relojes</title>
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet" />
-  <!-- Estilos -->
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-  <!-- Navbar -->
-  <nav class="navbar">
-    <a href="#inicio" class="logo">Relojes</a>
-    <ul class="nav-links">
-      <li><a href="#inicio">Inicio</a></li>
-      <li><a href="#coleccion">Colección</a></li>
-      <li><a href="#comprar">Comprar</a></li>
-      <li><a href="#contacto">Contacto</a></li>
-    </ul>
-  </nav>
-
-  <!-- Hero -->
-  <header id="inicio">
-    <div class="hero-text">
-      <h1>Descubrí el tiempo con estilo</h1>
-      <p>Elegancia, precisión y diseño en cada tic.</p>
-      <div class="hero-buttons">
-        <a href="#coleccion" class="btn-primary">Ver colección</a>
-        <a href="#comprar" class="btn-primary larger">Comprar</a>
-      </div>
-    </div>
-  </header>
-
-  <!-- Colección -->
-  <section id="coleccion" class="contenido">
-    <h2>Explorá nuestra colección</h2>
-    <p>Marcas como Omega, Rolex, Casio y más te esperan con modelos únicos.</p>
-    <div class="collection-gallery">
-      <div class="gallery-item"><img src="img/fondo1.jpg" alt="Colección 1" /></div>
-      <div class="gallery-item"><img src="img/fondo2.jpg" alt="Colección 2" /></div>
-      <div class="gallery-item"><img src="img/fondo3.jpg" alt="Colección 3" /></div>
-    </div>
-  </section>
-
-  <!-- Comprar -->
-  <section id="comprar" class="contenido">
-    <h2>Agregá un reloj al carrito</h2>
-    <div class="form-container">
-      <form id="formReloj">
-        <select id="marca" required>
-          <option value="">Marca</option>
-          <option value="Casio">Casio</option>
-          <option value="Rolex">Rolex</option>
-          <option value="Seiko">Seiko</option>
-          <option value="Swatch">Swatch</option>
-          <option value="Omega">Omega</option>
-        </select>
-        <select id="modelo" required>
-          <option value="">Modelo</option>
-        </select>
-        <select id="anio" required>
-          <option value="">Año</option>
-          <option value="2023">2023</option>
-          <option value="2024">2024</option>
-          <option value="2025">2025</option>
-        </select>
-        <select id="condicion" required>
-          <option value="">Condición</option>
-          <option value="Nuevo">Nuevo</option>
-          <option value="Usado">Usado</option>
-        </select>
-        <button type="submit" class="btn-primary">Agregar</button>
-      </form>
-      <div id="mensajeEdicion" class="edit-message">
-        Estás editando un reloj. Clic en "Agregar" para guardar.
-      </div>
-    </div>
-    <div id="listaRelojes" class="galeria"></div>
-  </section>
-
-  <!-- Contacto -->
-  <section id="contacto" class="contenido">
-    <h2>Contacto</h2>
-    <p>Escribinos a <a href="mailto:contacto@relojes.com">contacto@relojes.com</a></p>
-  </section>
-
-  <!-- Footer -->
-  <footer class="site-footer">
-    <div class="footer-content">
-      <p>&copy; 2025 Relojes. Todos los derechos reservados.</p>
-      <p><a href="#">Términos y condiciones</a> | <a href="#">Política de privacidad</a></p>
-    </div>
-  </footer>
-
-  <!-- Script -->
-  <script src="script.js"></script>
+    <header>
+        <h1 id = "titulo">Hola que onda</h1>
+        <p id = "parrafo"> parrafo</p>
+    </header>
+    <main>
+        <button onclick="cambiarfondo">Hola</button>
+    </main>
+    <footer></footer>
+  <script src="Ej clase 5.js"></script>
 </body>
 </html>
