--- a/index.html
+++ b/index.html
@@ -1,19 +1,129 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Relojes</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <header>
-        <h1 id = "titulo">Hola que onda</h1>
-        <p id = "parrafo"> parrafo</p>
-    </header>
-    <main>
-        <button onclick="cambiarfondo">Hola</button>
-    </main>
-    <footer></footer>
-  <script src="Ej clase 5.js"></script>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow-sm">
+    <div class="container">
+      <a class="navbar-brand fw-bold texto-dorado" href="#inicio">Relojes</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navLinks" aria-controls="navLinks" aria-expanded="false" aria-label="Menú">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div id="navLinks" class="collapse navbar-collapse">
+        <ul class="navbar-nav ms-auto gap-lg-3">
+          <li class="nav-item"><a class="nav-link" href="#inicio">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="#coleccion">Colección</a></li>
+          <li class="nav-item"><a class="nav-link" href="#comprar">Comprar</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <header id="inicio" class="bg-dark text-center text-light d-flex flex-column justify-content-center pt-5">
+    <div class="container">
+      <h1 class="display-5 fw-bold texto-dorado">Descubrí el tiempo con estilo</h1>
+      <p class="lead mb-4">Elegancia, precisión y diseño en cada tic.</p>
+      <div class="d-flex flex-column flex-sm-row justify-content-center gap-3">
+        <a href="#coleccion" class="btn boton-dorado px-4">Ver colección</a>
+        <a href="#comprar" class="btn boton-dorado px-4">Comprar</a>
+      </div>
+    </div>
+  </header>
+
+  <section id="coleccion" class="py-5">
+    <div class="container text-center">
+      <h2 class="mb-3">Explorá nuestra colección</h2>
+      <p class="text-muted mb-4">Marcas destacadas como Omega, Rolex, Casio y más.</p>
+      <div id="collectionRow" class="row g-4"></div>
+    </div>
+  </section>
+
+  <div class="modal fade" id="watchModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 id="watchModalLabel" class="modal-title fw-semibold"></h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+        </div>
+        <div class="modal-body">
+          <img id="watchModalImg" class="img-fluid mb-3 rounded" alt="">
+          <p id="watchModalDesc" class="mb-0"></p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <section id="comprar" class="py-5 bg-light">
+    <div class="container">
+      <h2 class="text-center mb-4">Agregá un reloj al carrito</h2>
+
+      <div class="card shadow-lg p-4 mx-auto" style="max-width:900px;">
+        <form id="formReloj" class="row gy-3">
+          <div class="col-12 col-sm-6 col-lg-3">
+            <select id="marca" class="form-select" required>
+              <option value="">Marca</option>
+              <option value="Casio">Casio</option>
+              <option value="Rolex">Rolex</option>
+              <option value="Seiko">Seiko</option>
+              <option value="Swatch">Swatch</option>
+              <option value="Omega">Omega</option>
+            </select>
+          </div>
+          <div class="col-12 col-sm-6 col-lg-3">
+            <select id="modelo" class="form-select" required>
+              <option value="">Modelo</option>
+            </select>
+          </div>
+          <div class="col-12 col-sm-6 col-lg-3">
+            <select id="anio" class="form-select" required>
+              <option value="">Año</option>
+              <option value="2023">2023</option>
+              <option value="2024">2024</option>
+              <option value="2025">2025</option>
+            </select>
+          </div>
+          <div class="col-12 col-sm-6 col-lg-3">
+            <select id="condicion" class="form-select" required>
+              <option value="">Condición</option>
+              <option value="Nuevo">Nuevo</option>
+              <option value="Usado">Usado</option>
+            </select>
+          </div>
+          <div class="col-12 text-center">
+            <button class="btn boton-dorado px-5" type="submit">Agregar</button>
+          </div>
+        </form>
+        <small id="mensajeEdicion" class="text-center fst-italic mt-2 d-none">Estás editando un reloj. Hacé clic en “Agregar” para guardar.</small>
+      </div>
+
+      <div id="listaRelojes" class="row g-4 mt-4"></div>
+    </div>
+  </section>
+
+  <section id="contacto" class="py-5">
+    <div class="container text-center">
+      <h2 class="mb-3">Contacto</h2>
+      <p>Escribinos a <a href="mailto:contacto@relojes.com">contacto@relojes.com</a></p>
+    </div>
+  </section>
+
+  <footer class="bg-dark text-light py-4">
+    <div class="container text-center small">
+      <p class="mb-1">&copy; 2025 Relojes. Todos los derechos reservados.</p>
+      <a href="#" class="texto-dorado text-decoration-none me-2">Términos y condiciones</a> |
+      <a href="#" class="texto-dorado text-decoration-none ms-2">Política de privacidad</a>
+    </div>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
