Actualizo diseño con fondo lunar, nueva paleta y mejoras en el carrito

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Relojes</title>
+  <title>CHRONOS</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
@@ -12,7 +12,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow-sm">
     <div class="container">
-      <a class="navbar-brand fw-bold texto-dorado" href="#inicio">Relojes</a>
+      <a class="navbar-brand fw-bold texto-dorado" href="#inicio">CHRONOS</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navLinks" aria-controls="navLinks" aria-expanded="false" aria-label="Menú">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -67,7 +67,7 @@
 
       <div class="card shadow-lg p-4 mx-auto" style="max-width:900px;">
         <form id="formReloj" class="row gy-3">
-          <div class="col-12 col-sm-6 col-lg-3">
+          <div class="col-12 col-sm-6 col-lg-4">
             <select id="marca" class="form-select" required>
               <option value="">Marca</option>
               <option value="Casio">Casio</option>
@@ -77,24 +77,17 @@
               <option value="Omega">Omega</option>
             </select>
           </div>
-          <div class="col-12 col-sm-6 col-lg-3">
+          <div class="col-12 col-sm-6 col-lg-4">
             <select id="modelo" class="form-select" required>
               <option value="">Modelo</option>
             </select>
           </div>
-          <div class="col-12 col-sm-6 col-lg-3">
+          <div class="col-12 col-sm-6 col-lg-4">
             <select id="anio" class="form-select" required>
               <option value="">Año</option>
               <option value="2023">2023</option>
               <option value="2024">2024</option>
               <option value="2025">2025</option>
-            </select>
-          </div>
-          <div class="col-12 col-sm-6 col-lg-3">
-            <select id="condicion" class="form-select" required>
-              <option value="">Condición</option>
-              <option value="Nuevo">Nuevo</option>
-              <option value="Usado">Usado</option>
             </select>
           </div>
           <div class="col-12 text-center">
@@ -111,13 +104,26 @@
   <section id="contacto" class="py-5">
     <div class="container text-center">
       <h2 class="mb-3">Contacto</h2>
-      <p>Escribinos a <a href="mailto:contacto@relojes.com">contacto@relojes.com</a></p>
+      <p><strong>Email:</strong> <a href="mailto:benjarodriguezmoron@gmail.com">benjarodriguezmoron@gmail.com</a></p>
+      <p><strong>Teléfono:</strong> <a href="tel:+5491175843412">+54 911 7584 3412</a></p>
+      <p><strong>Dirección:</strong> Av. del Libertador 2677, C1425 CABA</p>
+      <div class="mt-4 d-flex justify-content-center">
+        <iframe
+          src="https://www.google.com/maps?q=Av.+del+Libertador+2677,+C1425+CABA&output=embed"
+          width="400"
+          height="250"
+          style="border:0;"
+          allowfullscreen=""
+          loading="lazy"
+        ></iframe>
+      </div>
+      
     </div>
   </section>
 
   <footer class="bg-dark text-light py-4">
     <div class="container text-center small">
-      <p class="mb-1">&copy; 2025 Relojes. Todos los derechos reservados.</p>
+      <p class="mb-1">&copy; 2025 CHRONOS. Todos los derechos reservados.</p>
       <a href="#" class="texto-dorado text-decoration-none me-2">Términos y condiciones</a> |
       <a href="#" class="texto-dorado text-decoration-none ms-2">Política de privacidad</a>
     </div>
