--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow-sm">
     <div class="container">
       <a class="navbar-brand fw-bold texto-dorado" href="#inicio">CHRONOS</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navLinks" aria-controls="navLinks" aria-expanded="false" aria-label="Menú">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navLinks">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div id="navLinks" class="collapse navbar-collapse">
@@ -53,9 +52,12 @@
           <h5 id="watchModalLabel" class="modal-title fw-semibold"></h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
         </div>
-        <div class="modal-body">
+        <div class="modal-body text-center">
           <img id="watchModalImg" class="img-fluid mb-3 rounded" alt="">
           <p id="watchModalDesc" class="mb-0"></p>
+          <div class="mt-4">
+            <button id="botonComprarModal" class="btn boton-dorado px-4">Agregar al carrito</button>
+          </div>
         </div>
       </div>
     </div>
@@ -64,7 +66,6 @@
   <section id="comprar" class="py-5 bg-light">
     <div class="container">
       <h2 class="text-center mb-4">Agregá un reloj al carrito</h2>
-
       <div class="card shadow-lg p-4 mx-auto" style="max-width:900px;">
         <form id="formReloj" class="row gy-3">
           <div class="col-12 col-sm-6 col-lg-4">
@@ -78,9 +79,7 @@
             </select>
           </div>
           <div class="col-12 col-sm-6 col-lg-4">
-            <select id="modelo" class="form-select" required>
-              <option value="">Modelo</option>
-            </select>
+            <select id="modelo" class="form-select" required><option value="">Modelo</option></select>
           </div>
           <div class="col-12 col-sm-6 col-lg-4">
             <select id="anio" class="form-select" required>
@@ -96,7 +95,6 @@
         </form>
         <small id="mensajeEdicion" class="text-center fst-italic mt-2 d-none">Estás editando un reloj. Hacé clic en “Agregar” para guardar.</small>
       </div>
-
       <div id="listaRelojes" class="row g-4 mt-4"></div>
     </div>
   </section>
@@ -108,16 +106,8 @@
       <p><strong>Teléfono:</strong> <a href="tel:+5491175843412">+54 911 7584 3412</a></p>
       <p><strong>Dirección:</strong> Av. del Libertador 2677, C1425 CABA</p>
       <div class="mt-4 d-flex justify-content-center">
-        <iframe
-          src="https://www.google.com/maps?q=Av.+del+Libertador+2677,+C1425+CABA&output=embed"
-          width="400"
-          height="250"
-          style="border:0;"
-          allowfullscreen=""
-          loading="lazy"
-        ></iframe>
+        <iframe src="https://www.google.com/maps?q=Av.+del+Libertador+2677,+C1425+CABA&output=embed" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       </div>
-      
     </div>
   </section>
 
