--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow-sm">
     <div class="container">
@@ -19,7 +20,6 @@
         <ul class="navbar-nav ms-auto gap-lg-3">
           <li class="nav-item"><a class="nav-link" href="#inicio">Inicio</a></li>
           <li class="nav-item"><a class="nav-link" href="#coleccion">Colección</a></li>
-          <li class="nav-item"><a class="nav-link" href="#comprar">Comprar</a></li>
           <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
         </ul>
       </div>
@@ -32,7 +32,6 @@
       <p class="lead mb-4">Elegancia, precisión y diseño en cada tic.</p>
       <div class="d-flex flex-column flex-sm-row justify-content-center gap-3">
         <a href="#coleccion" class="btn boton-dorado px-4">Ver colección</a>
-        <a href="#comprar" class="btn boton-dorado px-4">Comprar</a>
       </div>
     </div>
   </header>
@@ -41,61 +40,16 @@
     <div class="container text-center">
       <h2 class="mb-3">Explorá nuestra colección</h2>
       <p class="text-muted mb-4">Marcas destacadas como Omega, Rolex, Casio y más.</p>
+      <div id="reemplazoAviso" class="text-center text-danger fw-bold fs-4 d-none mb-4"></div>
       <div id="collectionRow" class="row g-4"></div>
     </div>
   </section>
 
-  <div class="modal fade" id="watchModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-lg">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 id="watchModalLabel" class="modal-title fw-semibold"></h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
-        </div>
-        <div class="modal-body text-center">
-          <img id="watchModalImg" class="img-fluid mb-3 rounded" alt="">
-          <p id="watchModalDesc" class="mb-0"></p>
-          <div class="mt-4">
-            <button id="botonComprarModal" class="btn boton-dorado px-4">Agregar al carrito</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
   <section id="comprar" class="py-5 bg-light">
     <div class="container">
-      <h2 class="text-center mb-4">Agregá un reloj al carrito</h2>
-      <div class="card shadow-lg p-4 mx-auto" style="max-width:900px;">
-        <form id="formReloj" class="row gy-3">
-          <div class="col-12 col-sm-6 col-lg-4">
-            <select id="marca" class="form-select" required>
-              <option value="">Marca</option>
-              <option value="Casio">Casio</option>
-              <option value="Rolex">Rolex</option>
-              <option value="Seiko">Seiko</option>
-              <option value="Swatch">Swatch</option>
-              <option value="Omega">Omega</option>
-            </select>
-          </div>
-          <div class="col-12 col-sm-6 col-lg-4">
-            <select id="modelo" class="form-select" required><option value="">Modelo</option></select>
-          </div>
-          <div class="col-12 col-sm-6 col-lg-4">
-            <select id="anio" class="form-select" required>
-              <option value="">Año</option>
-              <option value="2023">2023</option>
-              <option value="2024">2024</option>
-              <option value="2025">2025</option>
-            </select>
-          </div>
-          <div class="col-12 text-center">
-            <button class="btn boton-dorado px-5" type="submit">Agregar</button>
-          </div>
-        </form>
-        <small id="mensajeEdicion" class="text-center fst-italic mt-2 d-none">Estás editando un reloj. Hacé clic en “Agregar” para guardar.</small>
-      </div>
+      <h4 class="text-center mb-4">Carrito de compras</h4>
       <div id="listaRelojes" class="row g-4 mt-4"></div>
+      <div id="precioTotal" class="text-center fw-bold fs-5 mt-3"></div>
     </div>
   </section>
 
@@ -106,7 +60,12 @@
       <p><strong>Teléfono:</strong> <a href="tel:+5491175843412">+54 911 7584 3412</a></p>
       <p><strong>Dirección:</strong> Av. del Libertador 2677, C1425 CABA</p>
       <div class="mt-4 d-flex justify-content-center">
-        <iframe src="https://www.google.com/maps?q=Av.+del+Libertador+2677,+C1425+CABA&output=embed" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe
+          src="https://www.google.com/maps?q=Av.+del+Libertador+2677,+C1425+CABA&output=embed"
+          width="400"
+          height="250"
+          style="border:0;" allowfullscreen loading="lazy">
+        </iframe>
       </div>
     </div>
   </section>
