--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
           <li class="nav-item"><a class="nav-link" href="#inicio">Inicio</a></li>
           <li class="nav-item"><a class="nav-link" href="#coleccion">Colección</a></li>
           <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
+          <li class="nav-item">
+            <a class="nav-link d-flex align-items-center" href="#comprar">
+              <span class="me-1"></span>Carrito de Compras
+            </a>
+          </li>
         </ul>
       </div>
     </div>
