Agregado localStorage al carrito y soporte para edición persistente

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
           <li class="nav-item">
             <a class="nav-link d-flex align-items-center" href="#comprar">
-              <span class="me-1"></span>Carrito de Compras
+              <span class="me-1">🛒</span>Carrito
             </a>
           </li>
         </ul>
